feat(context management): support compaction and clear technique
